--- a/001_-_microcks_new_openapi/hello.yaml
+++ b/001_-_microcks_new_openapi/hello.yaml
@@ -1,27 +1,17 @@
-openapi: 3.0.2
+asyncapi: 3.0.0
 info:
-  title: Hello API
-  version: 1.0.0
-paths:
-  /hello/{incoming-parameter}:
-    get:
-      parameters:
-        - name: incoming-parameter
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: A greeting message
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-              examples:
-                example1:
-                  value:
-                    message: "Hello ${incoming-parameter}"
+  title: Hello world application
+  version: '0.1.0'
+channels:
+  hello:
+    address: 'hello'
+    messages:
+      sayHelloMessage:
+        payload:
+          type: string
+          pattern: '^hello .+$'
+operations:
+  receiveHello:
+    action: 'receive'
+    channel:
+      $ref: '#/channels/hello'
